# NetworkManager

./: .gitignore  Makefile.am  NEWS  configure.ac  meson.build  meson_options.txt
libnm-core/tests/: test-general.c
po/: POTFILES.in
shared/nm-glib-aux/: nm-macros-internal.h  nm-shared-utils.c  nm-shared-utils.h
src/: meson.build
src/devices/: nm-device.c
src/devices/ovs/: nm-device-ovs-interface.c  nm-ovsdb.c
src/initrd/: nmi-cmdline-reader.c
src/initrd/tests/: test-cmdline-reader.c
src/platform/: nm-platform.c
src/platform/tests/: test-nmp-object.c
src/settings/plugins/: meson.build
src/settings/plugins/keyfile/: nms-keyfile-plugin.c  (+3 more)
src/settings/plugins/netplan/: meson.build  nms-netplan-plugin.c  nms-netplan-plugin.h  nms-netplan-reader.c  nms-netplan-reader.h  nms-netplan-storage.c  nms-netplan-storage.h  nms-netplan-utils.c  nms-netplan-utils.h  nms-netplan-writer.c  nms-netplan-writer.h
src/settings/plugins/netplan/tests/: add-del.sh  add-mod.sh  loop.sh  meson.build  netplan-test-utils.h  rename.sh  test-netplan.c
src/settings/plugins/netplan/tests/yaml/: add-base-iface.yaml  add-bridge.yaml  add-slaves.yaml  basic-dhcp.yaml  basic.yaml  dhcp-hostname.yaml  ethernet-match-mac.yaml  exp-bond-lacp.yaml  exp-bond-main.yaml  exp-bond-rr.yaml  exp-bridge-main.yaml  exp-bridge-port.yaml  exp-vlan-write.yaml  exp-wifi-eap-peap.yaml  exp-wifi-eap-tls.yaml  exp-wifi-eap-ttls.yaml  exp-wifi-hotspot.yaml  exp-wifi-main.yaml  exp-wired-basic.yaml  exp-wired-static.yaml  test1_key_and_cert.pem  wifi-band-a.yaml  wired-default.yaml
(+1 files in other folders)
